[package]
name = "kaleidoscope_codegen"
version = "0.1.0"
authors = ["Jakob Leifhelm <jakob.leifhelm@gmail.com>"]
edition = "2018"

[dependencies]
kaleidoscope_ast = { path = "../kaleidoscope_ast" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
thread_local = "^1.1"