[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Jakob Leifhelm <jakob.leifhelm@gmail.com>"]
edition = "2018"

[dependencies]
kaleidoscope_ast = { path = "../kaleidoscope_ast" }
kaleidoscope_parser_pest = { path = "../kaleidoscope_parser_pest" }
kaleidoscope_codegen = { path = "../kaleidoscope_codegen" }
kaleidoscope_error = { path = "../kaleidoscope_error", features = [ "bunt", "codespan-reporting" ] }
clap = "^2.33"
atty = "^0.2"
bunt = "^0.2"