[package]
name = "kaleidoscope_parser_pest"
version = "0.1.0"
authors = ["Jakob Leifhelm <jakob.leifhelm@gmail.com>"]
edition = "2018"

[dependencies]
kaleidoscope_ast = { path = "../kaleidoscope_ast" }
kaleidoscope_error = { path = "../kaleidoscope_error", features = [ "bunt", "codespan-reporting" ] }
kaleidoscope_parser = { path = "../kaleidoscope_parser" }
pest = "^2.0"
pest_derive = "^2.0"
lexical-parse-float = "^0.8"

[dev-dependencies]
termcolor = "^1.1"
criterion = "^0.3"

[[bench]]
name = "file"
harness = false